# Grid-Docs

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_MODULES.md  ML_MODELS_PRD.md  ML_MODULES_IMPLEMENTATION.md  PRD_Event_Driven_Traffic.md  TRAFFIC_ANALYSIS_IDEA_PLAN.md  astram_eda.ipynb  claude.md  copy_screenshots.sh  docker-compose.yml  readme.md  rebuild_and_test.sh
backend/: .gitignore  README.md  pyproject.toml
backend/models/v1/: closure_calibrator.joblib  closure_model.joblib  cox_model.joblib  encoders.joblib  feature_importance.json  metadata.json
backend/scripts/: evaluate_models.py  replay_csv.py  seed_demo.py  train_impact_models.py
backend/src/grid_unlocked/: __init__.py  config.py  main.py  redis_client.py
backend/src/grid_unlocked/citizen/: __init__.py  cause_hint.py  centroid_seed.py  exif.py  geo.py  repository.py  router.py  schemas.py  service.py
backend/src/grid_unlocked/dashboard/: __init__.py  bus.py  incident_subscriber.py  router.py  schemas.py
backend/src/grid_unlocked/db/: __init__.py  models.py  session.py
backend/src/grid_unlocked/dispatch/: __init__.py  greedy.py  (+8 more)
backend/tests/: conftest.py  test_citizen.py  test_dashboard.py  test_dispatch.py  test_diversions.py  test_execution.py  test_features.py  test_field.py  test_governance.py  test_hotspots.py  test_impact.py  test_incident_broadcast.py  test_ingestion.py  test_integration.py  test_learning.py  test_m08_requirements.py  test_maps.py  test_planned.py  test_propagation.py  test_recommendations.py  test_robustness.py  test_transit.py  test_vms.py
(+236 files in other folders)
