[project]
name = "grid-unlocked"
version = "0.1.0"
description = "Grid Unlocked — event-driven traffic intelligence layer for ASTraM"
readme = "../readme.md"
authors = [
    { name = "Ashwary Gupta", email = "ashwarygupta13@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.137.2",
    "h3>=4.5.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "lifelines>=0.30.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "ortools>=9.14.6206",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.32",
    "redis>=5.2.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "xgboost>=3.3.0",
]

[project.scripts]
grid-unlocked = "grid_unlocked.main:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
